[gd_scene load_steps=6 format=3 uid="uid://c6k045mexxkyd"]

[ext_resource type="Shader" uid="uid://ec4berwr4wwc" path="res://Scripts/Shaders/dice_combined_effects.gdshader" id="1_n24en"]
[ext_resource type="Script" uid="uid://f3p5lcmx2oq5" path="res://Scripts/Core/dice.gd" id="1_nyboh"]
[ext_resource type="Resource" uid="uid://cyhek3ri4ljv7" path="res://Scripts/Dice/d4_dice.tres" id="3_n24en"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_duqd2"]
shader = ExtResource("1_n24en")
shader_parameter/glow_strength = 0.0
shader_parameter/lock_overlay_strength = 0.0
shader_parameter/disabled = false
shader_parameter/disabled_color = Color(0.8, 0, 0, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n24en"]
size = Vector2(64, 64)

[node name="Dice" type="Area2D" groups=["dice"]]
material = SubResource("ShaderMaterial_duqd2")
script = ExtResource("1_nyboh")
dice_data = ExtResource("3_n24en")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n24en")

[node name="ModContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
